# TranscriptML

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: api.rst  conf.py  index.rst  installation.md  requirements.txt  usage.md
scripts/: README.md  all_codon_ism_by_fold.sh  all_codon_ism_shard_by_fold.sh  build_saluki_gtf.sh  codon_ism_by_fold.sh  example_train_config.json  explore_codon_usage.py  hparam_sweep_cv_combo.sh  ism_by_fold.sh  make_saluki_hparam_grid.py  motif_ablation_all_folds.sh  motif_ablation_by_fold.sh  motif_epistasis_all_folds.sh  motif_epistasis_by_fold.sh  plot_motif_ablation_effects.py  sherlock_config.sh  submit_all_codon_ism_by_fold.sh  submit_all_codon_ism_shard_by_fold.sh  submit_codon_ism_by_fold.sh  submit_hparam_sweep_cv.sh  submit_ism_by_fold.sh  submit_motif_ablation_by_fold.sh  submit_motif_epistasis_by_fold.sh  submit_train_eval_cv.sh  submit_train_eval_split.sh  summarize_hparam_sweep.py  train_eval_cv_fold.sh  train_eval_split.sh  write_cv_fold_artifacts.py  write_train_config.py
scripts/mpra/: README.md  build_legnet_input.sh  example_legnet_train_config.json  hparam_sweep_cv_combo.sh  hparam_sweep_utils.py  ism_by_fold.sh  make_legnet_hparam_grid.py  mpra_config.sh  run_legnet_ism.sh  submit_hparam_sweep_cv.sh  submit_ism_by_fold.sh  (+7 more)
tests/: test_cli_analysis.py  test_codon_ism_summaries.py  test_cv_workflow.py  test_data.py  test_device_auto.py  test_hparam_sweep_utils.py  test_interpretation.py  test_ism_summary.py  test_motifs_edits.py  test_sequence_controls.py  test_splits_models.py  test_training_losses.py
workflows/: README.md  mpra_visualize_ism_workflow.py  saluki_visualize_ism_workflow.py
(+46 files in other folders)
