[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TranscriptML"
version = "0.1.0"
description = "Training and interpretation utilities for RNA sequence-to-function models."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "TranscriptML contributors"}
]
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.23",
  "torch>=2.0",
  "tomli>=2; python_version<'3.11'"
]

[project.optional-dependencies]
dev = [
  "pytest>=7"
]
genomics = [
  "pyfaidx>=0.8"
]
arrow = [
  "pyarrow>=12"
]
analysis = [
  "pyarrow>=12",
  "polars>=0.20",
  "seaborn>=0.13"
]

[project.scripts]
transcriptml = "transcriptml.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
